# ai-toolbox

./: .taurignore  AGENTS.md  DESIGN.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/resources/: AGENTS.md  gateway_provider_profiles.json  model_pricing.json  models.dev.json  models.json  preset_models.json
tauri/src/: auto_launch.rs  db.rs  http_client.rs  lib.rs  single_instance.rs  tray.rs  update.rs
tauri/src/coding/: AGENTS.md  all_api_hub.rs  cli_resolver.rs  db_id.rs  file_io.rs  mod.rs  path_expand.rs  preset_models.rs  prompt_file.rs  reapply_applied_runtime.rs  runtime_location.rs
tauri/src/coding/claude_code/: AGENTS.md  adapter.rs  commands.rs  mod.rs  plugin_metadata_sync.rs  plugin_state.rs  settings_merge.rs  tray_support.rs  types.rs
tauri/src/coding/codex/: AGENTS.md  adapter.rs  commands.rs  history_sync.rs  mod.rs  plugin_toml.rs  plugin_workspace.rs  tray_support.rs  types.rs  unified_history.rs
tauri/src/coding/gemini_cli/: AGENTS.md  adapter.rs  commands.rs  mod.rs  official_accounts.rs  tray_support.rs  types.rs
tauri/src/coding/grok/: AGENTS.md  commands.rs
tauri/src/coding/image/: AGENTS.md  commands.rs  store.rs  types.rs
tauri/src/coding/mcp/: AGENTS.md  adapter.rs  command_normalize.rs  commands.rs  config_sync.rs  format_configs.rs  mcp_store.rs  mod.rs  opencode_path.rs  package_version.rs  tray_support.rs  types.rs
tauri/src/coding/oh_my_openagent/: AGENTS.md  adapter.rs  commands.rs
tauri/src/coding/oh_my_opencode/: adapter.rs  commands.rs  mod.rs  tray_support.rs  types.rs
tauri/src/coding/oh_my_opencode_slim/: AGENTS.md  adapter.rs  commands.rs  mod.rs  tray_support.rs  types.rs
tauri/src/coding/open_claw/: AGENTS.md  adapter.rs  commands.rs  tray_support.rs  types.rs
tauri/src/coding/open_code/: AGENTS.md  adapter.rs  commands.rs  free_models.rs  models_api.rs  shell_env.rs  tray_support.rs  types.rs
tauri/src/coding/pi/: AGENTS.md  commands.rs  extensions.rs
tauri/src/coding/proxy_gateway/: AGENTS.md  commands.rs  mod.rs  paths.rs  pricing.rs  provider_profiles.rs  provider_protocol.rs  provider_switch.rs  request_log.rs  retryable_status.rs  runtime.rs  settings.rs  types.rs  usage_parser.rs  usage_stats.rs
tauri/src/coding/proxy_gateway/cli_proxy/: mod.rs
tauri/src/coding/proxy_gateway/protocol_conversion/: AGENTS.md  kernel.rs  mod.rs  stream.rs  transformer.rs  types.rs
tauri/src/coding/proxy_gateway/protocol_conversion/anthropic/: inbound.rs  mod.rs  outbound.rs
tauri/src/coding/proxy_gateway/protocol_conversion/gemini/: mod.rs
tauri/src/coding/proxy_gateway/protocol_conversion/llm/: constants.rs  mod.rs  model.rs  tools.rs
tauri/src/coding/proxy_gateway/protocol_conversion/openai/: chat.rs  mod.rs
tauri/src/coding/proxy_gateway/protocol_conversion/openai/responses/: mod.rs
tauri/src/coding/proxy_gateway/protocol_conversion/shared/: error.rs  messages.rs  mod.rs  signature.rs
tauri/src/coding/proxy_gateway/runtime/: connectivity_test.rs  debug_log.rs  http_io.rs  middleware.rs  observability.rs  pipeline.rs  providers.rs  upstream.rs
tauri/src/coding/proxy_gateway/runtime/compat/: codex_responses_compact.rs  mod.rs  xai_responses.rs
tauri/src/coding/proxy_gateway/transformer/: AGENTS.md  error.rs  kernel.rs  kernel_tests.rs  mod.rs  stream.rs
tauri/src/coding/proxy_gateway/transformer/anthropic/: outbound.rs
tauri/src/coding/proxy_gateway/transformer/gemini/: convert.rs  inbound.rs  mod.rs  outbound.rs  stream.rs
tauri/src/coding/proxy_gateway/transformer/openai/: chat.rs  codex_tools.rs
tauri/src/coding/proxy_gateway/transformer/openai/responses/: mod.rs  request.rs  shared.rs  (+2 more)
tauri/src/coding/proxy_gateway/transformer/shared/: error.rs  lossy.rs  mod.rs  tool_schema.rs
tauri/src/coding/session_manager/: AGENTS.md  claude_code.rs  codex.rs  gemini_cli.rs  mod.rs  open_claw.rs  open_code.rs  pi.rs  utils.rs
tauri/src/coding/skills/: AGENTS.md  adapter.rs  cache_cleanup.rs  central_repo.rs  commands.rs  git_fetcher.rs  installer.rs  onboarding.rs  path_executor.rs  skill_store.rs  sync_engine.rs  tool_adapters.rs  tray_support.rs  types.rs
tauri/src/coding/ssh/: AGENTS.md  adapter.rs  commands.rs  mcp_sync.rs  mod.rs  session.rs  skills_sync.rs  sync.rs  types.rs
tauri/src/coding/tools/: AGENTS.md  builtin.rs  claude_plugins.rs  custom_store.rs  detection.rs  mod.rs  types.rs
tauri/src/coding/wsl/: AGENTS.md  adapter.rs  commands.rs  mcp_sync.rs  mod.rs  skills_sync.rs  sync.rs  types.rs
tauri/src/db/: migrations.rs  sqlite_state.rs
tauri/src/db_migration/: oh_my_openagent_rename_v1.rs  skills_restore_name_normalization_v1.rs
tauri/src/settings/: adapter.rs  commands.rs  mod.rs  types.rs
tauri/src/settings/backup/: AGENTS.md  auto_backup.rs  local.rs  utils.rs  webdav.rs
tauri/tests/: coding.rs  sqlite_jsonb.rs
tauri/tests/coding/claude_code/: plugin_metadata_sync.rs  settings_merge.rs
tauri/tests/coding/codex/: history_sync.rs
tauri/tests/coding/gemini_cli/: default_official_config.rs
tauri/tests/coding/mcp/: command_normalize.rs
tauri/tests/coding/oh_my_opencode_slim/: adapter.rs
tauri/tests/coding/tools/: path_utils.rs
(+308 files in other folders)
