[package]
name = "ai-toolbox"
version = "0.1.0"
description = "AI Toolbox - Personal AI Tools Collection"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

surrealdb = { version = "2", features = ["kv-surrealkv"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = "2"
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
dirs = "5"
auto-launch = "0.5"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1

