[package]
name = "ai-toolbox"
version = "0.9.9"
description = "AI Toolbox - Personal AI Tools Collection"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2"
tauri-plugin-shell = "2.3.4"
tauri-plugin-updater = "2.9.0"
tauri-plugin-single-instance = "2"

surrealdb = { version = "2.6.2", features = ["kv-surrealkv"], default-features = false }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
json5 = "1.3.0"
thiserror = "2.0.17"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
zip = "2.4.2"
walkdir = "2.5.0"
reqwest = { version = "0.12.28", features = ["json", "multipart", "socks", "system-proxy", "rustls-tls-native-roots"] }
rust_decimal = "1.39.0"
bytes = "1.11.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-native-certs = "0.8.3"
webpki-roots = "1.0.5"
futures-util = "0.3.31"
regex = "1.12.2"
dirs = "5.0.1"
auto-launch = "0.5.0"
log = "0.4"
simplelog = "0.12"
indexmap = "2.13.0"
rusty-leveldb = "4.0.1"
toml = { version = "0.8.2", features = ["preserve_order"] }
toml_edit = "0.22"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
glob = "0.3"
russh = { version = "0.57", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.1"
rusqlite = { version = "0.39.0", features = ["bundled", "backup", "hooks"] }
tempfile = "3.23.0"
base64 = "0.22"
arboard = "3.6.1"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[target.'cfg(windows)'.dependencies]
junction = "1.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
